Added New Files

--- a/src/todo.css
+++ b/src/todo.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
     padding-top: 50px;
     font-family: Arial, sans-serif;
-    background-image: url('./pic/pic5.gif'); 
+    background-image: url('./pic/sky.gif'); 
     background-size: cover; 
     background-position: center;
     background-repeat: no-repeat; 
